fix: gap

--- a/src/features/dashboard/update-app/AppUpdateForm/app-update-form.scss
+++ b/src/features/dashboard/update-app/AppUpdateForm/app-update-form.scss
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 8px;
+    gap: rem(0.5);
   }
 
   .mblk {
